--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,14 +19,12 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "outDir": "./dist",
     "paths": {
       "@/*": ["./*"],
     }
   },
   "include": [
-    "./src",
-    "./types/index.d.ts"
+    "./index.ts"
 	],
   "exclude": [
 		"node_modules"
