--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http-errors": "^2.0.0",
     "https": "^1.0.0",
     "morgan": "^1.10.0",
+    "pug": "^3.0.2",
     "rimraf": "^5.0.5",
     "ts-add-js-extension": "^1.6.0",
     "tsc-alias": "^1.8.8"
