Added mocha tests
Signed-off-by: StoneyDSP <nathanjhood@googlemail.com>

--- a/package.json
+++ b/package.json
@@ -6,23 +6,31 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "serve": "node ./dist/index.js",
-    "start": "yarn prod",
-    "restart": "NODE_ENV=production yarn rebuild && yarn serve",
     "build": "tsc -p ./tsconfig.json && tsc-alias && ts-add-js-extension --dir=dist",
-    "rebuild": "yarn clean && tsc -p ./tsconfig.json && tsc-alias && ts-add-js-extension --dir=dist",
+    "postbuild": "cp -r ./views ./dist/views && cp -r ./public ./dist/public",
+    "rebuild": "yarn clean && yarn build",
+    "dbg": "DEBUG=https:* yarn dev",
+    "start": "yarn prod",
+    "restart": "yarn rebuild && yarn prod",
     "dev": "NODE_ENV=development yarn serve",
     "prod": "NODE_ENV=production yarn serve",
-    "clean": "rimraf dist",
-    "wipe": "yarn clean && rimraf node_modules",
+    "serve": "node ./dist/index.js",
+    "clean": "rm -rvf ./dist",
+    "wipe": "yarn clean && rm -rvf ./node_modules",
     "gen:ssl": "./generate.sh"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
