--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,7 @@ services:
 #      NODE_ENV: production
     ports:
       - 443:443
+    restart: always
     # networks:
     #   - public
     #   - private
