--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
     build:
       context: .
     environment:
-      MUST_BE_A_MAPPING: true
+      NODE_EXTRA_CA_CERTS: /etc/ssl/certs/ca-certificates.crt
 #      NODE_ENV: production
     ports:
       - 443:443
